# bring-cli

./: .gitignore  MANUAL_TEST.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: __init__.py  cli.py  client.py
tests/: __init__.py  test_cli.py  test_client.py
