[project]
name = "bring-cli"
version = "0.1.0"
description = "Command-line interface for the Bring! shopping list app"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nataniel Martin", email = "natmartin31@gmail.com"}
]
keywords = ["bring", "shopping", "grocery", "list", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]

dependencies = [
    "bring-api>=1.1.1",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit>=1.7",
]

[project.scripts]
bring-cli = "src.cli:main"

[project.urls]
Homepage = "https://github.com/havocked/bring-cli"
Repository = "https://github.com/havocked/bring-cli"
Issues = "https://github.com/havocked/bring-cli/issues"

# ---------- ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length (let formatter handle it)
    "SIM108", # ternary — readability matters more
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "E402",   # sys.path manipulation before imports
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
pythonpath = ["."]
asyncio_mode = "auto"

# ---------- coverage ----------
[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
